# discord_relay

./: .gitignore  README.md  config.example.yaml  docker-compose.yml  pyproject.toml
plans/: discord-messages-relay.md  push-to-bot-architecture.md  relay-client-cli.md
src/discord_messages_relay.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/relay_client/: README.md  __init__.py  cli.py  test.sh
src/relay_server/: __init__.py  auth.py  config.py  discord_client.py  main.py  models.py  queue.py  routing.py  schemas.py  webhooks.py
tests/: conftest.py  test_api.py  test_cli.py  test_config.py  test_queue.py  test_routing.py  test_webhooks.py
